@@ -8,7 +8,6 @@ signature TERM_STYLE =
 sig
   val setup: string -> (Proof.context -> term -> term) parser -> theory -> theory
   val parse: (term -> term) context_parser
-  val parse_bare: (term -> term) context_parser
 end;
 
 structure Term_Style: TERM_STYLE =
@@ -53,12 +52,6 @@ val parse = Args.context :|-- (fn ctxt => Scan.lift
       >> fold I
   || Scan.succeed I));
 
-val parse_bare = Args.context :|-- (fn ctxt => (legacy_feature "Old-style antiquotation style.";
-  Scan.lift Args.liberal_name
-  >> (fn name => fst (Args.context_syntax "style"
-       (Scan.lift (the_style (Proof_Context.theory_of ctxt) name))
-          (Args.src (("style", []), Position.none)) ctxt |>> (fn f => f ctxt)))));
-
 
 (* predefined styles *)
 
@@ -78,19 +71,6 @@ val style_prem = Args.name >> (fn raw_i => fn ctxt => fn t =>
   in
     if i <= length prems then nth prems (i - 1)
     else error ("Not enough premises for prem " ^ string_of_int i ^
-      " in propositon: " ^ Syntax.string_of_term ctxt t)
-  end);
-
-fun style_parm_premise i = Scan.succeed (fn ctxt => fn t =>
-  let
-    val i_str = string_of_int i;
-    val _ = legacy_feature (quote ("prem" ^ i_str)
-      ^ " term style encountered; use explicit argument syntax "
-      ^ quote ("prem " ^ i_str) ^ " instead.");
-    val prems = Logic.strip_imp_prems t;
-  in
-    if i <= length prems then nth prems (i - 1)
-    else error ("Not enough premises for prem" ^ i_str ^
       " in propositon: " ^ Syntax.string_of_term ctxt t)
   end);
 
@@ -115,25 +95,6 @@ val _ = Context.>> (Context.map_theory
   setup "rhs" (style_lhs_rhs snd) #>
   setup "prem" style_prem #>
   setup "concl" (Scan.succeed (K Logic.strip_imp_concl)) #>
-  setup "isub" (Scan.succeed (K isub_term)) #>
-  setup "prem1" (style_parm_premise 1) #>
-  setup "prem2" (style_parm_premise 2) #>
-  setup "prem3" (style_parm_premise 3) #>
-  setup "prem4" (style_parm_premise 4) #>
-  setup "prem5" (style_parm_premise 5) #>
-  setup "prem6" (style_parm_premise 6) #>
-  setup "prem7" (style_parm_premise 7) #>
-  setup "prem8" (style_parm_premise 8) #>
-  setup "prem9" (style_parm_premise 9) #>
-  setup "prem10" (style_parm_premise 10) #>
-  setup "prem11" (style_parm_premise 11) #>
-  setup "prem12" (style_parm_premise 12) #>
-  setup "prem13" (style_parm_premise 13) #>
-  setup "prem14" (style_parm_premise 14) #>
-  setup "prem15" (style_parm_premise 15) #>
-  setup "prem16" (style_parm_premise 16) #>
-  setup "prem17" (style_parm_premise 17) #>
-  setup "prem18" (style_parm_premise 18) #>
-  setup "prem19" (style_parm_premise 19)));
+  setup "isub" (Scan.succeed (K isub_term))));
 
 end;
